# Lux

./: COMPLETION_SUMMARY.md  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
examples/: async_example.lux  async_test.lux  complete_demo.lux  fibonacci.lux  function_expr_test.lux  hello_simple.lux  metatable_simple.lux  parallel_processing.lux  pointers_test.lux  true_parallel_demo.lux  two_sum.lux  type_checking_demo.lux  type_errors.lux
lib/: stdlib.lux
src/: lib.rs  main.rs
src/async_runtime/: executor.rs  mod.rs
src/error/: diagnostic.rs  mod.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/runtime/: interpreter.rs  mod.rs  value.rs
src/semantic/: analyzer.rs  mod.rs
src/types/: checker.rs  mod.rs  type_def.rs
tools/: semantic_analyzer.lux
